# mk2.py

./: .gitignore  README.md  flake.nix  format.sh  mk2_py.nix  pyproject.toml
mk2/: __init__.py  connection.py  framing.py  ram_var.py  session.py  setting.py  test_framing.py
mk2/examples/: monitor.py  write.py
mk2/frames/: __init__.py  f_commands.py  led.py  management.py  switch.py  types.py  w_commands.py
