[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mk2"
version = "0.0.1"
description = "Unofficial Victron MK2/VE.Bus client"
requires-python = ">=3.11"
dependencies = [
    "pyserial~=3.5",
]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "black",
    "flake8",
    "flake8-black",
    "isort",
]

[tool.pytest.ini_options]
python_files = "*.py"

[tool.isort]
profile = "black"
lines_between_sections = 0

[[tool.mypy.overrides]]
module = "serial_asyncio"
ignore_missing_imports = true
